cmake_minimum_required(VERSION 3.15)
project(devtool LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(devtool devtool.cpp)
if(MSVC)
  target_compile_options(devtool PRIVATE /W4)
else()
  target_compile_options(devtool PRIVATE -Wall -Wextra -Wpedantic)
endif()
